# home-assistant-csnet-home

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .yamllint  AGENTS.md  ALARM_API_IMPLEMENTATION.md  CI_CD_TESTING.md  CONTRIBUTING.md  DYNAMIC_VERSION_TESTING.md  FIXED_WATER_TEMPERATURE_IMPLEMENTATION.md  INTEGRATION_TESTING.md  Makefile  PR_DESCRIPTION.md  README.md  RELEASE_v2.2.1.md  config_flow.py  const.py  docker-compose.yml  format-code.sh  hacs.json  mkdocs.yml  nexus_config.json  pylintrc  sensor.py  setup.cfg
.agent/workflows/: format_code.md  nexus_dev.md  run_tests.md
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/: DEPLOYING_DOCUMENTATION.md  INTEGRATION_TESTING.md  LOCAL_TESTING.md  RELEASE_PROCESS.md  TAG_WORKFLOW_BEHAVIOR.md  TESTING_QUICKSTART.md  WORKFLOWS.md  dependabot.yaml  labeler.yaml  release.yaml
.github/act-events/: README.md  (+3 more)
agents/: nexus_architect.yaml  nexus_code_reviewer.yaml
custom_components/: __init__.py
docs/: CI_CD_TESTING.md  COMPRESSOR_SENSORS.md  CONTRIBUTING.md  DEPLOYING_DOCUMENTATION.md  SUPPORTED_DEVICES.md  index.md  requirements.txt
scripts/: .branch-protection-test-1761634600  integration-test.sh  test-workflows.sh
test_config/: README.md  automations.yaml  configuration.yaml  scenes.yaml  scripts.yaml
tests/: README.md  __init__.py  bandit.yaml  conftest.py  test_api.py  test_climate.py  test_config_flow.py  test_coordinator.py  test_fixtures_sanitization.py  test_helpers.py  test_number.py  test_performance.py  test_security.py  test_sensor.py  test_switch.py  test_water_heater.py
(+53 files in other folders)
