[metadata]
license      = Apache License 2.0
license_file = LICENSE
platforms    = any
description  = HASS custom-compontents integration for CSNet-Home Hitachi
long_description = file: README.md
keywords     = Home Automation, HASS, HACS, automation
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.12
    Topic :: Home Automation

[tool:pytest]
testpaths = tests
norecursedirs = .git
log_level=INFO
addopts =
    --strict-markers
    --asyncio-mode=auto

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
doctests = True
# To work with Black
max-line-length = 160
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
# E231 missing whitespace after ':'
ignore =
    E501,
    W503,
    E203,
    D202,
    W504
    E231

[mypy]
python_version = 3.12
ignore_errors = true
follow_imports = silent
ignore_missing_imports = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
